# Nucleo-de-Marketing

./: .gitignore  command.txt  index.html  notepad.env.txt  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.js.map  vite.config.ts
scripts/: doctoralia_check.py  google_ads_manager.py  scrape_text.js
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  http.json
src-tauri/src/: main.rs
src-tauri/src/commands/: automation.rs  gemini.rs  groq.rs  mod.rs  ollama.rs
src/marketing/: types.ts
src/marketing/db/: client.ts  index.ts
src/marketing/machines/: CampaignMachine.ts
src/marketing/services/: AIRuntime.ts  AIService.ts  NeuroLibrary.ts  TemplateEngine.ts
src/marketing/services/providers/: GeminiProvider.ts  GeminiRealProvider.ts  MistralProvider.ts  OllamaProvider.ts  TemplateProvider.ts
src/marketing/services/types/: IAContracts.ts
src/marketing/ui/: AnalysisModal.tsx  DataTab.tsx  FactoryTab.tsx  LibraryTab.tsx  MarketingDashboard.tsx  NeuroCopyModal.tsx  RadarTab.tsx  SettingsTab.tsx  StrategyView.tsx
src/modules/ads/: AdsCard.tsx  AdsView.tsx  index.ts  types.ts
ui/: index.html
ui/marketing/: app.js  index.html  style.css
ui/shared/: config.js  eventBus.js
ui/shell/: app.js  index.html  style.css
